# boundary_explorer

./: .env.example  .gitignore  AI_GUIDE.md  DEPLOYMENT.md  README.md  WARP.md  nixpacks.toml  pyproject.toml  railway.json  railway.toml
server/: __init__.py  pyproject.toml
server/app/: main.py
server/wkls_vis_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: .env.example  .env.local.example  README.md  index.html  package.json  pnpm-lock.yaml  railway.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: MapView.tsx
